spacings, colors, floating pt number bugfix

--- a/tip-and-tax-calc/src/components/TipTax/TipTax.scss
+++ b/tip-and-tax-calc/src/components/TipTax/TipTax.scss
@@ -2,19 +2,12 @@
 	border: 1px solid rgb(195, 195, 195);
 	border-radius: 5px;
 	margin-top: 100px;
-	padding-bottom: 40px;
+	padding-bottom: 50px;
 }
 
 .title {
 	font-family: 'Roboto', sans-serif;
-	background-color: lightblue;
+	padding-top: 20px;
 	padding-left: 50px;
-}
-
-.spacing {
-	background-color: lightgoldenrodyellow;
-}
-
-.content {
-	background-color: lightgray;
+	padding-bottom: 10px;
 }
